# pico-joystick

./: .gitignore  LICENCE.md  README.md
electronics/: fp-lib-table  pi_pico.kicad_sym  pico-joystick.kicad_pcb  pico-joystick.kicad_prl  pico-joystick.kicad_pro  pico-joystick.kicad_sch  sym-lib-table
electronics/output/: pico-joystick-B_Cu.gbr  pico-joystick-B_Mask.gbr  pico-joystick-B_Paste.gbr  pico-joystick-B_Silkscreen.gbr  pico-joystick-Edge_Cuts.gbr  pico-joystick-F_Cu.gbr  pico-joystick-F_Mask.gbr  pico-joystick-F_Paste.gbr  pico-joystick-F_Silkscreen.gbr  pico-joystick-NPTH-drl_map.gbr  pico-joystick-NPTH.drl  pico-joystick-PTH-drl_map.gbr  pico-joystick-PTH.drl  pico-joystick-drl.rpt  pico-joystick-job.gbrjob
electronics/pi_pico.pretty/: Pi_Pico.kicad_mod
hardware/: board.scad  case.scad  dsub.scad  pi_pico.scad  utilities.scad
hardware/output/: case.stl  lid.stl
software/: CMakeLists.txt  buffer.c  buffer.h  joystick.c  joystick.h  main.c  pico_sdk_import.cmake  pins.h  usb_callbacks.c  usb_descriptors.h  usb_hid.c  usb_hid.h
